--- a/force-app/main/default/lwc/uit_userImportTool/uit_userImportTool.html
+++ b/force-app/main/default/lwc/uit_userImportTool/uit_userImportTool.html
@@ -20,6 +20,7 @@
                     <p class="slds-text-heading--medium slds-text-title_bold">Import Results:</p>
                     <p class="slds-text-heading--small">Imported Records: <strong>{importResult.importedRecords}</strong></p>
                     <p class="slds-text-heading--small">Updated records: <strong>{importResult.updatedRecords}</strong></p>
+                    <p class="slds-text-heading--small">Failured records: <strong>{importResult.errors}</strong></p>
                     <p class="slds-text-heading--small">Import Status: <strong>{importResult.importStatus}</strong></p>
                 </div>
                 <div slot="footer" class="slds-text-align--center">
